Upgrade to JDK 17 and remove useless things about unmute